--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@ header{
 .secoes{
     font-family: 'Baron';
     text-align: center;
-    padding: 4rem;
+    margin: 4rem;
     color: #fff;
 }
 .mudar{
