--- a/index.css
+++ b/index.css
@@ -44,6 +44,7 @@ header{
     position: relative;
     cursor: pointer;
     transition: color 0.3s;
+    color: #00f;
 }
 .palavra-hover:hover {
     color: #000;
@@ -125,6 +126,76 @@ header{
     border: 1px #000 solid;
     transition: 1s;
 }
+.container-sobremim{
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top:50%;
+    left: 50%;
+    height: 300px;
+    width: 50%;
+    background-color: #fff;
+    border: 1px solid #000;
+    border-radius: .5rem;
+    box-shadow: 3px 10px 0px 0px rgba(0,0,0,0.83);
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1s, visibility 1s;
+}
+.container-sobremim.aberto {
+    visibility: visible;
+    opacity: 1;
+}
+.container-sobremim > p{
+    width: 75%;
+    font-size: 1rem;
+    text-align: justify;
+}
+.partSuperios{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.partSuperios > h1{
+    font-family: 'Roboto', sans-serif;
+}
+.buttonSuperior{
+    height: 20px;
+    width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #000;
+    color: #fff;
+    border: #000 1px solid;
+    border-radius: .25rem 0rem;
+    transition: 1s;
+
+}
+.buttonSuperior:hover{
+    background-color: #fff;
+    color: #000;
+    border: #000 1px solid;
+    border-radius: 0rem .25rem;
+    transition: 1s;
+}
+
+
+.aberto{
+    display: flex;
+}
+.invisivel{
+    display: none;
+}
+
+
+
+
+
 .sitesC{
     margin: 0rem 1rem;
 }
@@ -148,7 +219,7 @@ header{
 .secoes{
     font-family: 'Baron';
     text-align: center;
-    margin: 4rem;
+    padding: 4rem;
     color: #fff;
 }
 .mudar{
@@ -246,11 +317,11 @@ header{
 #Bank{
     background-image: url(./imgs/fotosProjetos/bank.png); 
     background-size: cover;
-    border-radius: 0;
 }
 #BankCell{
     background-image: url(./imgs/fotosProjetos/bankCell.png);
     background-size: cover;
+    border-radius: 0;
 }
 .especificacoes-titlo-bank{
     color: #0f4;
@@ -266,11 +337,12 @@ header{
 #CarrosImgs{
     background-image: url(./imgs/fotosProjetos/carrosMaisRapidosDoMundo.png); 
     background-size: cover;
-    border-radius: 0;
+    
 }
 #CarrosCell{
     background-image: url(./imgs/fotosProjetos/CarrosCell.png); 
     background-size: cover;
+    border-radius: 0;
 } 
 
 .especificacoes-titlo-carros{
@@ -640,6 +712,10 @@ header{
   }
 
 @media only screen and (max-width: 970px){
+    .container-sobremim{
+        height: 400px;
+        width: 90%;
+    }
     .parte1{
         flex-direction: column;
         justify-content: center;
@@ -684,7 +760,7 @@ header{
     .habilidade-list{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 100px;
+        gap: 35px;
     }
     .project-click-Bank, .project-click-carros, .project-click-av, .project-click-projectB{
         height: 300px;
@@ -695,13 +771,6 @@ header{
     }
     .project-click-carros:hover, .project-click-av:hover, .project-click-projectB:hover, .project-click-Bank:hover {
         letter-spacing: 2px;
-    }
-    .tecnologias-Project > imagse{
-        height: 30px;
-    }
-
-    .habilidade-list > li > imagse{
-        height: 50px;
     }
     .imagse{
         height: 30px;
